--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
           <ul class="list work-images-list">
             <li class="img work-img">
               <img
+                srcset="
+                  ./images/what-we-doing/img1.jpg    1x,
+                  ./images/what-we-doing/img1@2x.jpg 2x
+                "
                 class="img-item"
                 src="./images/what-we-doing/img1.jpg"
                 alt="Desktop"
@@ -145,6 +149,10 @@
             </li>
             <li class="img work-img">
               <img
+                srcset="
+                  ./images/what-we-doing/img2.jpg    1x,
+                  ./images/what-we-doing/img2@2x.jpg 2x
+                "
                 class="img-item"
                 src="./images/what-we-doing/img2.jpg"
                 alt="Mobile"
@@ -154,6 +162,10 @@
             </li>
             <li class="img work-img">
               <img
+                srcset="
+                  ./images/what-we-doing/img3.jpg    1x,
+                  ./images/what-we-doing/img3@2x.jpg 2x
+                "
                 class="img-item"
                 src="./images/what-we-doing/img3.jpg"
                 alt="Adaptive"
@@ -172,6 +184,7 @@
           <ul class="list team-list">
             <li class="team-member">
               <img
+                srcset="./images/team/img1.jpg 1x, ./images/team/img1@2x.jpg 2x"
                 class="img team-member-img"
                 src="./images/team/img1.jpg"
                 alt="Mark Guerrero"
@@ -216,6 +229,7 @@
             </li>
             <li class="team-member">
               <img
+                srcset="./images/team/img2.jpg 1x, ./images/team/img2@2x.jpg 2x"
                 class="img team-member-img"
                 src="./images/team/img2.jpg"
                 alt="Tom Ford"
@@ -260,6 +274,7 @@
             </li>
             <li class="team-member">
               <img
+                srcset="./images/team/img3.jpg 1x, ./images/team/img3@2x.jpg 2x"
                 class="img team-member-img"
                 src="./images/team/img3.jpg"
                 alt="Camila Garcia"
@@ -303,6 +318,7 @@
             </li>
             <li class="team-member">
               <img
+                srcset="./images/team/img4.jpg 1x, ./images/team/img4@2x.jpg 2x"
                 class="img team-member-img"
                 src="./images/team/img4.jpg"
                 alt="Daniel Wilson"
