--- a/portfolio.html
+++ b/portfolio.html
@@ -89,6 +89,10 @@
               <a href="" class="card-link link">
                 <div class="img-overlay-wrapper">
                   <img
+                    srcset="
+                      ./images/portfolio/img-1.jpg    1x,
+                      ./images/portfolio/img-1@2x.jpg 2x
+                    "
                     class="card-img"
                     src="./images/portfolio/img-1.jpg"
                     alt="Banking app"
@@ -112,6 +116,10 @@
               <a href="" class="card-link link">
                 <div class="img-overlay-wrapper">
                   <img
+                    srcset="
+                      ./images/portfolio/img-2.jpg    1x,
+                      ./images/portfolio/img-2@2x.jpg 2x
+                    "
                     class="card-img"
                     src="./images/portfolio/img-2.jpg"
                     alt="Cashless payment"
@@ -135,6 +143,10 @@
               <a href="" class="card-link link">
                 <div class="img-overlay-wrapper">
                   <img
+                    srcset="
+                      ./images/portfolio/img-3.jpg    1x,
+                      ./images/portfolio/img-3@2x.jpg 2x
+                    "
                     class="card-img"
                     src="./images/portfolio/img-3.jpg"
                     alt="Meditation App"
@@ -158,6 +170,10 @@
               <a href="" class="card-link link">
                 <div class="img-overlay-wrapper">
                   <img
+                    srcset="
+                      ./images/portfolio/img-4.jpg    1x,
+                      ./images/portfolio/img-4@2x.jpg 2x
+                    "
                     class="card-img"
                     src="./images/portfolio/img-4.jpg"
                     alt="Taxi Service"
@@ -181,6 +197,10 @@
               <a href="" class="card-link link">
                 <div class="img-overlay-wrapper">
                   <img
+                    srcset="
+                      ./images/portfolio/img-5.jpg    1x,
+                      ./images/portfolio/img-5@2x.jpg 2x
+                    "
                     class="card-img"
                     src="./images/portfolio/img-5.jpg"
                     alt="Screen Illustrations"
@@ -204,6 +224,10 @@
               <a href="" class="card-link link">
                 <div class="img-overlay-wrapper">
                   <img
+                    srcset="
+                      ./images/portfolio/img-6.jpg    1x,
+                      ./images/portfolio/img-6@2x.jpg 2x
+                    "
                     class="card-img"
                     src="./images/portfolio/img-6.jpg"
                     alt="Online Courses"
@@ -227,6 +251,10 @@
               <a href="" class="card-link link">
                 <div class="img-overlay-wrapper">
                   <img
+                    srcset="
+                      ./images/portfolio/img-7.jpg    1x,
+                      ./images/portfolio/img-7@2x.jpg 2x
+                    "
                     class="card-img"
                     src="./images/portfolio/img-7.jpg"
                     alt="Instagram Stories Concept"
@@ -250,6 +278,10 @@
               <a href="" class="card-link link">
                 <div class="img-overlay-wrapper">
                   <img
+                    srcset="
+                      ./images/portfolio/img-8.jpg    1x,
+                      ./images/portfolio/img-8@2x.jpg 2x
+                    "
                     class="card-img"
                     src="./images/portfolio/img-8.jpg"
                     alt="Organic Food"
@@ -273,6 +305,10 @@
               <a href="" class="card-link link">
                 <div class="img-overlay-wrapper">
                   <img
+                    srcset="
+                      ./images/portfolio/img-9.jpg    1x,
+                      ./images/portfolio/img-9@2x.jpg 2x
+                    "
                     class="card-img"
                     src="./images/portfolio/img-9.jpg"
                     alt="Fresh Coffee"
