add adaptive hero

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </section>
       <!-- HERO / -->
       <!-- Section 2 -->
-      <section class="work-vision section">
+      <!-- <section class="work-vision section">
         <div class="container">
           <h2 class="section-header visually-hidden">Our vision</h2>
           <ul class="work list">
@@ -212,10 +212,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Section 2 / -->
       <!-- Section 3 -->
-      <section class="work-images section">
+      <!-- <section class="work-images section">
         <div class="container">
           <h2 class="section-header">What are we doing</h2>
           <ul class="list work-images-list">
@@ -260,10 +260,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Section 3 / -->
       <!-- Section 4 -->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container">
           <h2 class="section-header">Our Team</h2>
           <ul class="list team-list">
@@ -447,10 +447,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Section 4 /-->
       <!-- Section 5 Customers -->
-      <section class="section section-customers">
+      <!-- <section class="section section-customers">
         <div class="container">
           <h2 class="section-header">Customers</h2>
           <ul class="customers-list list">
@@ -498,11 +498,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Section 5 / -->
     </main>
     <!-- FOOTER -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container container-footer">
         <div class="footer-wrapper">
           <a class="logo link logo-footer" href="./index.html"
@@ -588,10 +588,10 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- FOOTER / -->
     <!-- *******MODAL******** -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -691,7 +691,7 @@
           </button>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
