add section 2-5 mobile styles

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </section>
       <!-- HERO / -->
       <!-- Section 2 -->
-      <!-- <section class="work-vision section">
+      <section class="work-vision section">
         <div class="container">
           <h2 class="section-header visually-hidden">Our vision</h2>
           <ul class="work list">
@@ -212,10 +212,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section 2 / -->
       <!-- Section 3 -->
-      <!-- <section class="work-images section">
+      <section class="work-images section">
         <div class="container">
           <h2 class="section-header">What are we doing</h2>
           <ul class="list work-images-list">
@@ -260,10 +260,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section 3 / -->
       <!-- Section 4 -->
-      <!-- <section class="team section">
+      <section class="team section">
         <div class="container">
           <h2 class="section-header">Our Team</h2>
           <ul class="list team-list">
@@ -447,10 +447,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section 4 /-->
       <!-- Section 5 Customers -->
-      <!-- <section class="section section-customers">
+      <section class="section section-customers">
         <div class="container">
           <h2 class="section-header">Customers</h2>
           <ul class="customers-list list">
@@ -498,7 +498,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Section 5 / -->
     </main>
     <!-- FOOTER -->
