add mobile footer styles

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
       <!-- Section 5 / -->
     </main>
     <!-- FOOTER -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container container-footer">
         <div class="footer-wrapper">
           <a class="logo link logo-footer" href="./index.html"
@@ -588,7 +588,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- FOOTER / -->
     <!-- *******MODAL******** -->
     <!-- <div class="backdrop is-hidden" data-modal>
