--- a/portfolio.html
+++ b/portfolio.html
@@ -25,39 +25,123 @@
     <header class="page-header">
       <div class="container page-header-container">
         <nav class="page-nav">
-          <a href="./index.html" class="logo link"
+          <a class="logo link" href="./index.html"
             >Web<span class="logo-studio">Studio</span></a
           >
-          <ul class="list menu">
+          <ul class="menu list">
             <li class="menu-item">
-              <a href="./index.html" class="menu-link link">Studio</a>
+              <a class="menu-link link" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-              <a href="./portfolio.html" class="menu-link current link"
+              <a class="menu-link link current" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li class="menu-item">
-              <a href="" class="menu-link link">Contacts</a>
+              <a class="menu-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
-        <address class="contacts">
-          <ul class="list contacts-list">
-            <li class="contacts-item">
-              <a
-                href="mailto:info@devstudio.com"
-                class="link contacts-item-link"
+        <button
+          type="button"
+          class="mobile-menu-open js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="mobile-menu-open-icon" width="32" height="22">
+            <use href="./images/icons.svg#icon-hamburger"></use>
+          </svg>
+        </button>
+        <address id="contacts" class="contacts">
+          <ul class="contacts-list list">
+            <li class="contact link">
+              <a class="contact-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="contacts-item">
-              <a href="tel:+110001111111" class="link contacts-item-link"
+            <li class="contact">
+              <a class="contact-link link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
           </ul>
         </address>
+      </div>
+      <div class="mobile-menu js-menu-container" id="mobile-menu">
+        <div class="container mobile-menu-container">
+          <button type="button" class="menu-close-btn js-close-menu">
+            <svg class="menu-close-btn-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+
+          <ul class="mobile-menu-list list">
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-link link current" href="./index.html"
+                >Studio</a
+              >
+            </li>
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-link link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-link link" href="">Contacts</a>
+            </li>
+          </ul>
+
+          <div class="mobile-menu-contacts-block">
+            <address id="mobile-menu-contacts" class="menu-contacts">
+              <ul class="mobile-menu-contacts-list list">
+                <li class="mobile-menu-item">
+                  <a
+                    class="mobile-menu-link link mobile-menu-phone"
+                    href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li class="mobile-menu-item">
+                  <a
+                    class="mobile-menu-link link mobile-menu-email"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="footer-social-list list">
+                <li class="footer-social-list-item">
+                  <a href="" class="footer-social-list-link">
+                    <svg class="footer-social-list-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-social-list-item">
+                  <a href="" class="footer-social-list-link">
+                    <svg class="footer-social-list-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-social-list-item">
+                  <a href="" class="footer-social-list-link">
+                    <svg class="footer-social-list-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-social-list-item">
+                  <a href="" class="footer-social-list-link">
+                    <svg class="footer-social-list-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </address>
+          </div>
+        </div>
       </div>
     </header>
     <!-- Header / -->
