--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
     </footer>
     <!-- FOOTER / -->
     <!-- *******MODAL******** -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -691,7 +691,7 @@
           </button>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
