--- a/portfolio.html
+++ b/portfolio.html
@@ -77,12 +77,10 @@
 
           <ul class="mobile-menu-list list">
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link link current" href="./index.html"
-                >Studio</a
-              >
+              <a class="mobile-menu-link link" href="./index.html">Studio</a>
             </li>
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link link" href="./portfolio.html"
+              <a class="mobile-menu-link link current" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
