--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   >
                 </li>
               </ul>
-              <ul class="footer-social-list list">
+              <ul class="footer-social-list list mobile-social-list">
                 <li class="footer-social-list-item">
                   <a href="" class="footer-social-list-link">
                     <svg class="footer-social-list-icon" width="24" height="24">
