--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </address>
       </div>
       <div class="mobile-menu js-menu-container" id="mobile-menu">
-        <div class="container mobile-menu-container">
+        <div class="mobile-menu-container">
           <button type="button" class="menu-close-btn js-close-menu">
             <svg class="menu-close-btn-icon" width="8" height="8">
               <use href="./images/icons.svg#icon-close"></use>
